# study-speech-recognition

./: .gitignore  README.md  pyproject.toml
study_faster_whisper_a/: study_faster_whisper.py
study_faster_whisper_b/: audio_transcriber.py  whisper_utils.py
study_speech_recognition/: study_speech_recognition.py
