[tool.poetry]
name = "studyspeechrecognition"
version = "0.1.0"
description = "Study Speech Recognition"
authors = ["Tatsuya Miyazaki <miyazaki.tatsuya.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.4"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
