[tool.poetry]
name = "study-speech-recognition"
version = "0.1.0"
description = "Study Speech Recognition"
authors = ["Tatsuya Miyazaki <miyazaki.tatsuya.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.4"
pyaudio = "^0.2.14"
numpy = "<2.0.0"
watchdog = "^5.0.0"
faster-whisper = "^1.0.3"
webrtcvad = "^2.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
